--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="text-align: center;">Articles</h1>
+    <h1 style="text-align: center;">Articles:</h1>
     <hr>
     <div style="background-color: lightgray; font-family: Arial, Helvetica, sans-serif; color: black; padding: 10px; margin: 10px; border-radius: 10px;">
         <% articles.forEach(article => { %>
